--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align: center;
+  font-style: bold;
+}
+nav{
+  text-align: center;
+}
+nav a{
+  padding: 10px;
+  font-size: smaller;
+  background-color: cornflowerblue;
+  color: brown;
+}
+figure{
+  text-align: center;
+}
+figcaption{
+ 
+  font-size: 15px;
+}
+section#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  font-size: larger;
+}
+section#details div{
+  float: left;
+  margin:auto;
+  text-align: center;
+  width: 25%;
+  background-color: blanchedalmond;
+}
